# oqim-platform-review

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/.planning/debug/: typing-read-indicators-broken.md
backend/app/: main.py
backend/app/brain/: __init__.py  embedding_service.py  llm.py  llm_policy.py  media_parts.py  model_policy.py  prompt_ownership.py  prompt_payload.py  prompt_registry.py  reranker.py  token_tracker.py  usage_costs.py
backend/app/core/: async_tasks.py  config.py  consumer_names.py  correlation.py  deps.py  event_spine.py  events.py  google_auth.py  log_sanitizer.py  logging.py  redis_streams.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  action_runtime.py  agent.py  agent_conversation_state.py  agent_document.py  agent_session.py  agent_skill.py  commerce_catalog.py  commercial_action.py  commercial_spine.py  conversation.py  conversation_hydration_runtime.py  conversation_turn_session.py  crm_connection.py  customer.py  delivery_runtime.py  event_spine_record.py  hermes_run.py  hermes_runtime_policy.py  hermes_session.py  knowledge_mcp.py  learned_skill_candidate.py  learning_signal.py  media_runtime.py  media_vault.py  message.py  message_insight.py  onboarding_runtime.py  outreach.py  owner_bind_token.py  telegram_auth_attempt.py  telegram_session.py  tool_grant.py  trigger.py  workspace.py  workspace_budget.py
backend/app/schemas/: agent.py  (+8 more)
backend/evals/: conftest.py  test_e2e_smoke.py  test_search_quality.py  test_voice_quality.py
backend/migrations/: env.py
backend/scripts/: app_capability_fixture.py  promoter_campaign.py  provision_owner_bot.py  seed_company.py  seed_pilot_company.py  show_prompt.py
backend/tests/: conftest.py  test_action_runtime_phase7.py  test_adversarial_replay_eval.py  test_agent_business_actions.py  test_agent_config_loader.py  test_agent_config_loader_kind.py  test_agent_context_window_config.py  test_agent_control_owner_bot.py  test_agent_conversation_state.py  test_agent_default_tools.py  test_agent_document.py  test_agent_documents.py  test_agent_finalization_guard.py  test_agent_memory_contracts.py  test_agent_memory_service.py  test_agent_runtime_api.py  test_agent_runtime_context.py  test_agent_runtime_events.py  test_agent_session_architecture_drift.py  test_agent_session_hot_path.py  test_agent_sessions.py  test_agent_talking_contracts.py  test_agent_talking_pacing_policy.py  test_agent_turn_telemetry.py  test_agent_voice_config.py  test_agents.py  test_ai_crm_runtime_boundary.py  test_amocrm_auth.py  test_amocrm_provider.py  test_amocrm_reads.py  test_architecture_docs_hygiene.py  test_architecture_legacy_drift.py  test_auth.py  test_autopilot_circuit_breaker.py  test_bi_commands.py  test_botfather_provisioner.py  test_brain_agent_documents_endpoints.py  test_brain_documents_endpoints.py  test_brain_index_reconciler.py  test_brain_skills_endpoints.py  (+217 more)
(+900 files in other folders)
